add required add-opens options for 25.11 (#159) (#160)